--- a/compose.yml
+++ b/compose.yml
@@ -9,8 +9,10 @@ services:
         - ./:/app
     container_name: python_app
     working_dir: /app
+    ports:
+      - "8080:8080"
     environment:
       - PYTHONPATH=/app
-      - ENV=local
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     tty: true
     stdin_open: true
