--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,25 +7,18 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pyyaml = "^6.0"
-# v2 ref: https://docs.pydantic.dev/latest/migration/
-pydantic = "^2.1.1"
-pydantic-settings = "^2.0.2"
-python-json-logger = "^2.0.7"
-sentry-sdk = "^1.29.0"
+langchain = "^0.0.273"
+fastapi = "^0.102.0"
+openai = "^0.27.9"
+pydantic = "^2.3.0"
+sse-starlette = "^1.6.5"
+uvicorn = "^0.23.2"
+sseclient-py = "^1.7.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
-pytest = "^7.3.1"
-pytest-cov = "^4.0.0"
-pytest-mock = "^3.10.0"
 mypy = "^1.2.0"
 ruff = "^0.0.265"
-pytest-env = "^0.8.1"
-poethepoet = "^0.21.1"
-
-[tool.poe.tasks]
-test = "pytest $1 --cov=/app --cov-report term-missing"
 
 [tool.ruff]
 # Same as Black.
